<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.zhyx.databindingdemo.viewmodel.PasswordForgetActivityViewModel"/>

        <variable
            name="navigationOnClickListener"
            type="android.view.View.OnClickListener"/>

        <variable
            name="account"
            type="String"/>
        <variable
            name="email"
            type="String"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.zhyx.databindingdemo.view.activity.PasswordForgetActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:navigationOnClickListener="@{navigationOnClickListener}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:navigationIcon="@drawable/ic_keyboard_arrow_left_black_24dp">

            <TextView
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password_find_back"/>
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/forget_pwd_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_forget_pwd"/>

        <EditText
            android:id="@+id/forget_pwd_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_30dp"
            android:paddingLeft="@dimen/padding_10dp"
            android:paddingRight="@dimen/padding_10dp"
            android:text="@={account}"
            android:singleLine="true"
            android:maxLength="20"
            android:imeOptions="actionNext"
            app:layout_constraintBaseline_toBaselineOf="@+id/forget_pwd_username_title"
            app:layout_constraintLeft_toRightOf="@+id/forget_pwd_username_title"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/forget_pwd_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_pwd_username"/>

        <EditText
            android:id="@+id/forget_pwd_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_30dp"
            android:paddingLeft="@dimen/padding_10dp"
            android:paddingRight="@dimen/padding_10dp"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:maxLength="32"
            android:text="@={email}"
            app:layout_constraintBaseline_toBaselineOf="@+id/forget_pwd_email_title"
            app:layout_constraintLeft_toLeftOf="@+id/forget_pwd_username"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/forget_pwd_check_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:background="@drawable/btn_selector"
            android:text="@string/check_code_send"
            android:onClick="@{() -> viewModel.sendCheckCode(account,email)}"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_pwd_email"/>

        <EditText
            android:id="@+id/forget_pwd_check_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_10dp"
            android:paddingLeft="@dimen/padding_10dp"
            android:paddingRight="@dimen/padding_10dp"
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="@+id/forget_pwd_check_code_title"
            app:layout_constraintLeft_toLeftOf="@+id/forget_pwd_email_title"
            app:layout_constraintRight_toLeftOf="@+id/forget_pwd_check_code_title"
            />


    </android.support.constraint.ConstraintLayout>

</layout>
